--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RePaws - Sustainable Pet Care</title>
     <link rel="stylesheet" href="shared.css">
-    <link rel="stylesheet" href="about-us.css">
+    <link rel="stylesheet" href="index.css">
     <script src="script.js"></script>
 </head>
 
@@ -17,28 +17,56 @@
         <div class="nav-right"><a href="/about-us">About Us</a></div>
     </nav>
 
-    <!-- <section class="welcome">
+    <section class="welcome">
         <h1>RePaws</h1>
         <div class="text">
             <p class="welcome-one">Waste less.</p>
             <p class="welcome-two">Shine more.</p>
         </div>
-    </section> -->
+    </section>
 
-    <section class="about-us">
-        <img src="illu.svg" alt="RePaws Illustration">
-        <div>
-            <h3>Hello from RePaws!</h3>
-            <p> Born from a love for pets and nature, RePaws transforms pineapple peels - an overlooked agricultural
-                by-product - into a sustainable pet care ecosystem. With enzyme-powered, 100% natural formulas, we
-                deliver
-                safe, effective, and eco-friendly solutions for pet hygiene.
-                We believe that caring for pets also means caring for the planet. Every RePaws product is a step toward
-                reducing agricultural waste, supporting local farmers, and protecting the well-being of both animals and
-                their owners.
-                Let's build a greener, healthier world - together, one paw at a time.
-            </p>
+    <section class="hero">
+        <img src="img/hero.svg" alt="Hero Image">
+        <div class="hero-overlay">
+            <h1>Welcome to RePaws</h1>
+            <a href="/products" class="cta-button">Explore Our Products</a>
         </div>
+    </section>
+
+    <section class="highlight-products">
+        <h2>Featured Products</h2>
+        <div class="product-list">
+            <div class="product-card">
+                <img src="img/product1.svg" alt="">
+                <p>Natural Pet Shampoo</p>
+                <p class="price">215,000₫</p>
+            </div>
+            <div class="product-card">
+                <img src="img/product1.svg" alt="">
+                <p>Soothing Enzyme Spray</p>
+                <p class="price">185,000₫</p>
+            </div>
+            <div class="product-card">
+                <img src="img/product1.svg" alt="">
+                <p>Fermented Soap Bar</p>
+                <p class="price">95,000₫</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="product-categories">
+        <h2>Shop by Category</h2>
+        <div class="category-grid">
+            <a href="/products" class="category-box">Shampoo</a>
+            <a href="/products" class="category-box">Spray</a>
+            <a href="/products" class="category-box">Soap</a>
+            <a href="/products" class="category-box">Bundles</a>
+        </div>
+    </section>
+
+    <section class="learn-more">
+        <h2>Want to Know More About Us?</h2>
+        <a href="/about-us" class="cta-button">Visit About Us</a>
     </section>
     <footer class="footer">
         <div class="footer-content">
@@ -65,7 +93,7 @@
             <p>&copy; 2025 RePaws. All rights reserved.</p>
         </div>
     </footer>
-    
+
 </body>
 
 </html>
