--- a/products.html
+++ b/products.html
@@ -7,7 +7,7 @@
     <title>RePaws - Sustainable Pet Care</title>
     <link rel="stylesheet" href="shared.css">
     <link rel="stylesheet" href="products.css">
-    <script src="product.js"></script>
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -17,21 +17,12 @@
         <div class="nav-right"><a href="/about-us">About Us</a></div>
     </nav>
 
-    <!-- <section class="welcome">
-        <h1>RePaws</h1>
-        <div class="text">
-            <p class="welcome-one">Waste less.</p>
-            <p class="welcome-two">Shine more.</p>
-        </div>
-    </section> -->
-
     <section class="product-page">
         <div class="section-head-box">
           <h2>All RePaws Products</h2>
         </div>
       
         <div class="product-layout">
-          <!-- Sidebar Filters -->
           <aside class="product-filters">
             <div class="filter-box">
               <h4>Price Range</h4>
