--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>RePaws - Sustainable Pet Care</title>
     <link rel="stylesheet" href="shared.css">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="script.js"></script>
 </head>
 
@@ -57,10 +58,10 @@
     <section class="product-categories">
         <h2>Shop by Category</h2>
         <div class="category-grid">
-            <a href="/products" class="category-box">Shampoo</a>
-            <a href="/products" class="category-box">Spray</a>
-            <a href="/products" class="category-box">Soap</a>
-            <a href="/products" class="category-box">Bundles</a>
+            <a href="/products" class="category-box shampoo">Shampoo</a>
+            <a href="/products" class="category-box spray">Spray</a>
+            <a href="/products" class="category-box soap">Soap</a>
+            <a href="/products" class="category-box bundle">Bundles</a>
         </div>
     </section>
 
