--- a/products.html
+++ b/products.html
@@ -7,7 +7,9 @@
     <title>RePaws - Sustainable Pet Care</title>
     <link rel="stylesheet" href="shared.css">
     <link rel="stylesheet" href="products.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="script.js"></script>
+    <script src="products.js"></script>
 </head>
 
 <body>
@@ -58,8 +60,8 @@
               </div>
               <div class="product-hover">
                 <div class="hover-buttons">
-                  <button class="icon-button">🛒</button>
-                  <button class="icon-button">❤️</button>
+                  <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
+                  <button class="icon-button"><i class="fa fa-heart"></i></button>
                   <button class="buy-now">MUA NGAY</button>
                 </div>
               </div>
@@ -76,8 +78,8 @@
               </div>
               <div class="product-hover">
                 <div class="hover-buttons">
-                  <button class="icon-button">🛒</button>
-                  <button class="icon-button">❤️</button>
+                  <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
+                  <button class="icon-button"><i class="fa fa-heart"></i></button>
                   <button class="buy-now">MUA NGAY</button>
                 </div>
               </div>
@@ -94,8 +96,8 @@
               </div>
               <div class="product-hover">
                 <div class="hover-buttons">
-                  <button class="icon-button">🛒</button>
-                  <button class="icon-button">❤️</button>
+                  <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
+                  <button class="icon-button"><i class="fa fa-heart"></i></button>
                   <button class="buy-now">MUA NGAY</button>
                 </div>
               </div>
@@ -112,8 +114,8 @@
               </div>
               <div class="product-hover">
                 <div class="hover-buttons">
-                  <button class="icon-button">🛒</button>
-                  <button class="icon-button">❤️</button>
+                  <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
+                  <button class="icon-button"><i class="fa fa-heart"></i></button>
                   <button class="buy-now">MUA NGAY</button>
                 </div>
               </div>
@@ -130,8 +132,8 @@
               </div>
               <div class="product-hover">
                 <div class="hover-buttons">
-                  <button class="icon-button">🛒</button>
-                  <button class="icon-button">❤️</button>
+                  <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
+                  <button class="icon-button"><i class="fa fa-heart"></i></button>
                   <button class="buy-now">MUA NGAY</button>
                 </div>
               </div>
@@ -148,8 +150,8 @@
               </div>
               <div class="product-hover">
                 <div class="hover-buttons">
-                  <button class="icon-button">🛒</button>
-                  <button class="icon-button">❤️</button>
+                  <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
+                  <button class="icon-button"><i class="fa fa-heart"></i></button>
                   <button class="buy-now">MUA NGAY</button>
                 </div>
               </div>
