--- a/about-us.html
+++ b/about-us.html
@@ -120,12 +120,15 @@
             </div>
             <div class="footer-right">
                 <h3>Contact Us</h3>
-                <p>Email: <a href="mailto:hello@repaws.com">hello@repaws.com</a></p>
+                <div class="contacts">
+                    <p><i class="fa fa-envelope"></i><a href="mailto:hello@repaws.com">hello@repaws.com</a></p>
+                    <p><i class="fa fa-phone"></i><a href="tel:+00123456789">(+00) 123 456 789</a></p>
+                </div>
                 <h3>Follow us:</h3>
                 <ul class="social-links">
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Facebook</a></li>
-                    <li><a href="#">LinkedIn</a></li>
+                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
                 </ul>
             </div>
         </div>
