home style update

--- a/index.html
+++ b/index.html
@@ -29,29 +29,68 @@
     <section class="hero">
         <img src="img/hero.svg" alt="Hero Image">
         <div class="hero-overlay">
-            <h1>Welcome to RePaws</h1>
+            <h1>Gentle on Pets. Kind to the Planet.</h1>
+<h2>Discover Natural Pet Care with RePaws</h2>
             <a href="/products" class="cta-button">Explore Our Products</a>
         </div>
     </section>
 
     <section class="highlight-products">
         <h2>Featured Products</h2>
-        <div class="product-list">
-            <div class="product-card">
-                <img src="img/product1.svg" alt="">
-                <p>Natural Pet Shampoo</p>
-                <p class="price">215,000₫</p>
-            </div>
-            <div class="product-card">
-                <img src="img/product1.svg" alt="">
-                <p>Soothing Enzyme Spray</p>
-                <p class="price">185,000₫</p>
-            </div>
-            <div class="product-card">
-                <img src="img/product1.svg" alt="">
-                <p>Fermented Soap Bar</p>
-                <p class="price">95,000₫</p>
-            </div>
+        <div class="product-grid">
+            <div class="product-card page-1">
+                <div class="product-image">
+                  <a href="/product/1"><img src="img/product1.svg" alt="RePaws Product 1"></a>
+                  <span class="discount">-27%</span>
+                </div>
+                <div class="product-info">
+                  <h4>Natural Pet Shampoo</h4>
+                  <p class="price">$8.60 <span class="old-price">$11.79</span></p>
+                </div>
+                <div class="product-hover">
+                  <div class="hover-buttons">
+                    <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
+                    <button class="icon-button"><i class="fa fa-heart"></i></button>
+                    <button class="buy-now">BUY NOW</button>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="product-card page-1">
+                <div class="product-image">
+                  <a href="/product/1"><img src="img/product1.svg" alt="RePaws Product 2"></a>
+                  <span class="discount">-16%</span>
+                </div>
+                <div class="product-info">
+                  <h4>Soothing Enzyme Spray</h4>
+                  <p class="price">$7.40 <span class="old-price">$8.80</span></p>
+                </div>
+                <div class="product-hover">
+                  <div class="hover-buttons">
+                    <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
+                    <button class="icon-button"><i class="fa fa-heart"></i></button>
+                    <button class="buy-now">BUY NOW</button>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="product-card page-1">
+                <div class="product-image">
+                  <a href="/product/1"><img src="img/product1.svg" alt="RePaws Product 3"></a>
+                  <span class="discount">-27%</span>
+                </div>
+                <div class="product-info">
+                  <h4>Fermented Soap Bar</h4>
+                  <p class="price">$3.80 <span class="old-price">$5.15</span></p>
+                </div>
+                <div class="product-hover">
+                  <div class="hover-buttons">
+                    <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
+                    <button class="icon-button"><i class="fa fa-heart"></i></button>
+                    <button class="buy-now">BUY NOW</button>
+                  </div>
+                </div>
+              </div>
         </div>
     </section>
 
