--- a/index.html
+++ b/index.html
@@ -1,142 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Explore RePaws' sustainable and all-natural enzyme-powered pet care products. From shampoos to sprays, crafted with love for pets and planet."
+    />
+    <meta
+      name="keywords"
+      content="RePaws, sustainable pet care, enzyme pet products, eco-friendly pet hygiene, natural pet shampoo, dog spray, pet soap"
+    />
+    <meta name="author" content="RePaws" />
     <title>RePaws - Sustainable Pet Care</title>
-    <link rel="stylesheet" href="shared.css">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="script.js"></script>
-</head>
+    <link rel="apple-touch-icon" sizes="180x180" href="img/logo.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="img/logo.svg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="img/logo.svg" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="stylesheet" href="shared.css" />
+    <link rel="stylesheet" href="index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <script src="index.js"></script>
+  </head>
 
-<body>
+  <body>
     <nav>
-        <div class="nav-left"><a href="/products">Our Products</a></div>
-        <div class="nav-center"><a href="/">RePaws</a></div>
-        <div class="nav-right"><a href="/about-us">About Us</a></div>
+      <div class="nav-left"><a href="/products">Our Products</a></div>
+      <div class="nav-center"><a href="/">RePaws</a></div>
+      <div class="nav-right"><a href="/about-us">About Us</a></div>
     </nav>
 
     <section class="welcome">
-        <h1>RePaws</h1>
-        <div class="text">
-            <p class="welcome-one">Waste less.</p>
-            <p class="welcome-two">Shine more.</p>
-        </div>
+      <h1>RePaws</h1>
+      <div class="text">
+        <p class="welcome-one">Waste less.</p>
+        <p class="welcome-two">Shine more.</p>
+      </div>
     </section>
 
     <section class="hero">
-        <img src="img/hero.svg" alt="Hero Image">
-        <div class="hero-overlay">
-            <h1>Gentle on Pets. Kind to the Planet.</h1>
-<h2>Discover Natural Pet Care with RePaws</h2>
-            <a href="/products" class="cta-button">Explore Our Products</a>
-        </div>
+      <img src="img/hero.svg" alt="Hero Image" />
+      <div class="hero-overlay">
+        <h1>Gentle on Pets. Kind to the Planet.</h1>
+        <h2>Discover Natural Pet Care with RePaws</h2>
+        <a href="/products" class="cta-button">Explore Our Products</a>
+      </div>
     </section>
 
     <section class="highlight-products">
-        <h2>Featured Products</h2>
-        <div class="product-grid">
-            <div class="product-card page-1">
-                <div class="product-image">
-                  <a href="/product/1"><img src="img/product1.svg" alt="RePaws Product 1"></a>
-                  <span class="discount">-27%</span>
-                </div>
-                <div class="product-info">
-                  <h4>Natural Pet Shampoo</h4>
-                  <p class="price">$8.60 <span class="old-price">$11.79</span></p>
-                </div>
-                <div class="product-hover">
-                  <div class="hover-buttons">
-                    <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
-                    <button class="icon-button"><i class="fa fa-heart"></i></button>
-                    <button class="buy-now">BUY NOW</button>
-                  </div>
-                </div>
-              </div>
-  
-              <div class="product-card page-1">
-                <div class="product-image">
-                  <a href="/product/1"><img src="img/product1.svg" alt="RePaws Product 2"></a>
-                  <span class="discount">-16%</span>
-                </div>
-                <div class="product-info">
-                  <h4>Soothing Enzyme Spray</h4>
-                  <p class="price">$7.40 <span class="old-price">$8.80</span></p>
-                </div>
-                <div class="product-hover">
-                  <div class="hover-buttons">
-                    <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
-                    <button class="icon-button"><i class="fa fa-heart"></i></button>
-                    <button class="buy-now">BUY NOW</button>
-                  </div>
-                </div>
-              </div>
-  
-              <div class="product-card page-1">
-                <div class="product-image">
-                  <a href="/product/1"><img src="img/product1.svg" alt="RePaws Product 3"></a>
-                  <span class="discount">-27%</span>
-                </div>
-                <div class="product-info">
-                  <h4>Fermented Soap Bar</h4>
-                  <p class="price">$3.80 <span class="old-price">$5.15</span></p>
-                </div>
-                <div class="product-hover">
-                  <div class="hover-buttons">
-                    <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
-                    <button class="icon-button"><i class="fa fa-heart"></i></button>
-                    <button class="buy-now">BUY NOW</button>
-                  </div>
-                </div>
-              </div>
+      <h2>Featured Products</h2>
+      <div class="product-grid">
+        <div class="product-card page-1">
+          <div class="product-image">
+            <a href="/product/1"
+              ><img src="img/product1.svg" alt="RePaws Product 1"
+            /></a>
+            <span class="discount">-27%</span>
+          </div>
+          <div class="product-info">
+            <h4>Natural Pet Shampoo</h4>
+            <p class="price">$8.60 <span class="old-price">$11.79</span></p>
+          </div>
+          <div class="product-hover">
+            <div class="hover-buttons">
+              <button class="icon-button">
+                <i class="fa fa-shopping-cart"></i>
+              </button>
+              <button class="icon-button"><i class="fa fa-heart"></i></button>
+              <button class="buy-now">BUY NOW</button>
+            </div>
+          </div>
         </div>
+
+        <div class="product-card page-1">
+          <div class="product-image">
+            <a href="/product/1"
+              ><img src="img/product1.svg" alt="RePaws Product 2"
+            /></a>
+            <span class="discount">-16%</span>
+          </div>
+          <div class="product-info">
+            <h4>Soothing Enzyme Spray</h4>
+            <p class="price">$7.40 <span class="old-price">$8.80</span></p>
+          </div>
+          <div class="product-hover">
+            <div class="hover-buttons">
+              <button class="icon-button">
+                <i class="fa fa-shopping-cart"></i>
+              </button>
+              <button class="icon-button"><i class="fa fa-heart"></i></button>
+              <button class="buy-now">BUY NOW</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="product-card page-1">
+          <div class="product-image">
+            <a href="/product/1"
+              ><img src="img/product1.svg" alt="RePaws Product 3"
+            /></a>
+            <span class="discount">-27%</span>
+          </div>
+          <div class="product-info">
+            <h4>Fermented Soap Bar</h4>
+            <p class="price">$3.80 <span class="old-price">$5.15</span></p>
+          </div>
+          <div class="product-hover">
+            <div class="hover-buttons">
+              <button class="icon-button">
+                <i class="fa fa-shopping-cart"></i>
+              </button>
+              <button class="icon-button"><i class="fa fa-heart"></i></button>
+              <button class="buy-now">BUY NOW</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="product-categories">
-        <h2>Shop by Category</h2>
-        <div class="category-grid">
-            <a href="/products" class="category-box shampoo">Shampoo</a>
-            <a href="/products" class="category-box spray">Spray</a>
-            <a href="/products" class="category-box soap">Soap</a>
-            <a href="/products" class="category-box bundle">Bundles</a>
-        </div>
+      <h2>Shop by Category</h2>
+      <div class="category-grid">
+        <a href="/products" class="category-box shampoo">Shampoo</a>
+        <a href="/products" class="category-box spray">Spray</a>
+        <a href="/products" class="category-box soap">Soap</a>
+        <a href="/products" class="category-box bundle">Bundles</a>
+      </div>
     </section>
 
     <section class="learn-more">
-        <h2>Want to Know More About Us?</h2>
-        <a href="/about-us" class="cta-button">Visit About Us</a>
+      <h2>Want to Know More About Us?</h2>
+      <a href="/about-us" class="cta-button">Visit About Us</a>
     </section>
     <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-left">
-                <h3>Stay in the Loop</h3>
-                <p>Subscribe to our newsletter for updates, pet care tips, and green living insights.</p>
-                <form class="subscribe-form">
-                    <input type="email" placeholder="Enter your email" required>
-                    <button type="submit">Subscribe</button>
-                </form>
-            </div>
-            <div class="footer-right">
-                <h3>Contact Us</h3>
-                <div class="contacts">
-                    <p><i class="fa fa-envelope"></i><a href="mailto:hello@repaws.com">hello@repaws.com</a></p>
-                    <p><i class="fa fa-phone"></i><a href="tel:+00123456789">(+00) 123 456 789</a></p>
-                </div>
-                <h3>Follow us:</h3>
-                <ul class="social-links">
-                    <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
-                </ul>
-            </div>
+      <div class="footer-content">
+        <div class="footer-left">
+          <h3>Stay in the Loop</h3>
+          <p>
+            Subscribe to our newsletter for updates, pet care tips, and green
+            living insights.
+          </p>
+          <form class="subscribe-form">
+            <input type="email" placeholder="Enter your email" required />
+            <button type="submit">Subscribe</button>
+          </form>
         </div>
-        <div class="footer-bottom">
-            <p>&copy; 2025 RePaws. All rights reserved.</p>
+        <div class="footer-right">
+          <h3>Contact Us</h3>
+          <div class="contacts">
+            <p>
+              <i class="fa fa-envelope"></i
+              ><a href="mailto:hello@repaws.com">hello@repaws.com</a>
+            </p>
+            <p>
+              <i class="fa fa-phone"></i
+              ><a href="tel:+00123456789">(+00) 123 456 789</a>
+            </p>
+          </div>
+          <h3>Follow us:</h3>
+          <ul class="social-links">
+            <li>
+              <a href="#"><i class="fa fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-facebook-square"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-linkedin-square"></i></a>
+            </li>
+          </ul>
         </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2025 RePaws. All rights reserved.</p>
+      </div>
     </footer>
-
-</body>
-
+  </body>
 </html>
