--- a/product/1.html
+++ b/product/1.html
@@ -1,168 +1,229 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Explore RePaws' sustainable and all-natural enzyme-powered pet care products. From shampoos to sprays, crafted with love for pets and planet."
+    />
+    <meta
+      name="keywords"
+      content="RePaws, sustainable pet care, enzyme pet products, eco-friendly pet hygiene, natural pet shampoo, dog spray, pet soap"
+    />
+    <meta name="author" content="RePaws" />
+    <title>RePaws | Natural Pet Shampoo</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="img/logo.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="img/logo.svg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="img/logo.svg" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="stylesheet" href="../shared.css" />
+    <link rel="stylesheet" href="product.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>RePaws | Natural Pet Shampoo</title>
-  <link rel="stylesheet" href="../shared.css" />
-  <link rel="stylesheet" href="product.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <script src="script.js"></script>
-</head>
+  <body>
+    <nav>
+      <div class="nav-left"><a href="/products">Our Products</a></div>
+      <div class="nav-center"><a href="/">RePaws</a></div>
+      <div class="nav-right"><a href="/about-us">About Us</a></div>
+    </nav>
 
-<body>
-  <nav>
-    <div class="nav-left"><a href="/products">Our Products</a></div>
-    <div class="nav-center"><a href="/">RePaws</a></div>
-    <div class="nav-right"><a href="/about-us">About Us</a></div>
-  </nav>
-
-  <section class="product-detail">
-    <div class="product-images">
-      <img class="main-image" src="../img/product1.svg" alt="Natural Pet Shampoo" />
-      <div class="thumbnail-row">
-        <img src="../img/product1.svg" alt="">
-        <img src="../img/product1.svg" alt="">
-        <img src="../img/product1.svg" alt="">
-        <img src="../img/product1.svg" alt="">
-      </div>
-    </div>
-
-    <div class="product-info">
-      <h1>Natural Pet Shampoo</h1>
-      <p class="price">$8.60 <span class="old-price">$11.80</span></p>
-      <p class="save">(You save $3.20)</p>
-      <p><strong>Main ingredients:</strong> Fermented pineapple enzyme extract, natural surfactants, probiotics, and essential oils.</p>
-
-      <div class="variant-select">
-        <label>Size:</label>
-        <select>
-          <option>100ml - Trial</option>
-          <option>250ml - Standard</option>
-          <option>500ml - Family Pack</option>
-        </select>
-      </div>
-
-      <div class="quantity">
-        <button>-</button>
-        <input type="number" value="1" />
-        <button>+</button>
-      </div>
-
-      <div class="buy-buttons">
-        <button class="add-to-cart">Add to Cart</button>
-        <button class="buy-now">Buy Now</button>
-      </div>
-
-      <p class="free-ship">Free nationwide shipping</p>
-    </div>
-  </section>
-
-  <section class="product-description">
-    <h2>Product Information</h2>
-
-    <h3>Overview</h3>
-    <p>
-      RePaws Natural Pet Shampoo is crafted with enzyme-rich pineapple extract and 100% plant-based ingredients. It gently cleanses your pet’s skin and coat, promotes a healthy microbiome, and reduces itchiness and odor. Eco-friendly and safe for all pets.
-    </p>
-
-    <h3>Key Benefits</h3>
-    <ul>
-      <li><strong>Enzyme-powered cleansing:</strong> Breaks down dirt and oil without irritation.</li>
-      <li><strong>Probiotics:</strong> Supports a healthy skin barrier and reduces inflammation.</li>
-      <li><strong>Essential oils:</strong> Leaves a fresh, calming scent on fur.</li>
-      <li><strong>Biodegradable formula:</strong> Safe for pets, people, and the planet.</li>
-    </ul>
-  </section>
-
-  <section class="related-products">
-    <h2>Related Products</h2>
-    <div class="product-grid" id="productGrid">
-      <div class="product-card page-1">
-        <div class="product-image">
-          <a href="/product/1"><img src="../img/product1.svg" alt="RePaws Product 2" /></a>
-          <span class="discount">-16%</span>
+    <section class="product-detail">
+      <div class="product-images">
+        <img
+          class="main-image"
+          src="../img/product1.svg"
+          alt="Natural Pet Shampoo"
+        />
+        <div class="thumbnail-row">
+          <img src="../img/product1.svg" alt="" />
+          <img src="../img/product1.svg" alt="" />
+          <img src="../img/product1.svg" alt="" />
+          <img src="../img/product1.svg" alt="" />
         </div>
-        <div class="product-info">
-          <h4>Soothing Enzyme Spray</h4>
-          <p class="price">$7.40 <span class="old-price">$8.80</span></p>
+      </div>
+
+      <div class="product-info">
+        <h1>Natural Pet Shampoo</h1>
+        <p class="price">$8.60 <span class="old-price">$11.80</span></p>
+        <p class="save">(You save $3.20)</p>
+        <p>
+          <strong>Main ingredients:</strong> Fermented pineapple enzyme extract,
+          natural surfactants, probiotics, and essential oils.
+        </p>
+
+        <div class="variant-select">
+          <label>Size:</label>
+          <select>
+            <option>100ml - Trial</option>
+            <option>250ml - Standard</option>
+            <option>500ml - Family Pack</option>
+          </select>
         </div>
-        <div class="product-hover">
-          <div class="hover-buttons">
-            <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
-            <button class="icon-button"><i class="fa fa-heart"></i></button>
-            <button class="buy-now">BUY NOW</button>
+
+        <div class="quantity">
+          <button>-</button>
+          <input type="number" value="1" />
+          <button>+</button>
+        </div>
+
+        <div class="buy-buttons">
+          <button class="add-to-cart">Add to Cart</button>
+          <button class="buy-now">Buy Now</button>
+        </div>
+
+        <p class="free-ship">Free nationwide shipping</p>
+      </div>
+    </section>
+
+    <section class="product-description">
+      <h2>Product Information</h2>
+
+      <h3>Overview</h3>
+      <p>
+        RePaws Natural Pet Shampoo is crafted with enzyme-rich pineapple extract
+        and 100% plant-based ingredients. It gently cleanses your pet’s skin and
+        coat, promotes a healthy microbiome, and reduces itchiness and odor.
+        Eco-friendly and safe for all pets.
+      </p>
+
+      <h3>Key Benefits</h3>
+      <ul>
+        <li>
+          <strong>Enzyme-powered cleansing:</strong> Breaks down dirt and oil
+          without irritation.
+        </li>
+        <li>
+          <strong>Probiotics:</strong> Supports a healthy skin barrier and
+          reduces inflammation.
+        </li>
+        <li>
+          <strong>Essential oils:</strong> Leaves a fresh, calming scent on fur.
+        </li>
+        <li>
+          <strong>Biodegradable formula:</strong> Safe for pets, people, and the
+          planet.
+        </li>
+      </ul>
+    </section>
+
+    <section class="related-products">
+      <h2>Related Products</h2>
+      <div class="product-grid" id="productGrid">
+        <div class="product-card page-1">
+          <div class="product-image">
+            <a href="/product/1"
+              ><img src="../img/product1.svg" alt="RePaws Product 2"
+            /></a>
+            <span class="discount">-16%</span>
+          </div>
+          <div class="product-info">
+            <h4>Soothing Enzyme Spray</h4>
+            <p class="price">$7.40 <span class="old-price">$8.80</span></p>
+          </div>
+          <div class="product-hover">
+            <div class="hover-buttons">
+              <button class="icon-button">
+                <i class="fa fa-shopping-cart"></i>
+              </button>
+              <button class="icon-button"><i class="fa fa-heart"></i></button>
+              <button class="buy-now">BUY NOW</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="product-card page-1">
+          <div class="product-image">
+            <a href="/product/1"
+              ><img src="../img/product1.svg" alt="RePaws Product 3"
+            /></a>
+            <span class="discount">-27%</span>
+          </div>
+          <div class="product-info">
+            <h4>Fermented Soap Bar</h4>
+            <p class="price">$3.80 <span class="old-price">$5.15</span></p>
+          </div>
+          <div class="product-hover">
+            <div class="hover-buttons">
+              <button class="icon-button">
+                <i class="fa fa-shopping-cart"></i>
+              </button>
+              <button class="icon-button"><i class="fa fa-heart"></i></button>
+              <button class="buy-now">BUY NOW</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="product-card page-1">
+          <div class="product-image">
+            <a href="/product/1"
+              ><img src="../img/product1.svg" alt="RePaws Product 4"
+            /></a>
+            <span class="discount">-26%</span>
+          </div>
+          <div class="product-info">
+            <h4>Gentle Paw Balm</h4>
+            <p class="price">$5.80 <span class="old-price">$7.80</span></p>
+          </div>
+          <div class="product-hover">
+            <div class="hover-buttons">
+              <button class="icon-button">
+                <i class="fa fa-shopping-cart"></i>
+              </button>
+              <button class="icon-button"><i class="fa fa-heart"></i></button>
+              <button class="buy-now">BUY NOW</button>
+            </div>
           </div>
         </div>
       </div>
+    </section>
 
-      <div class="product-card page-1">
-        <div class="product-image">
-          <a href="/product/1"><img src="../img/product1.svg" alt="RePaws Product 3" /></a>
-          <span class="discount">-27%</span>
+    <footer class="footer">
+      <div class="footer-content">
+        <div class="footer-left">
+          <h3>Stay in the Loop</h3>
+          <p>
+            Subscribe to our newsletter for updates, pet care tips, and green
+            living insights.
+          </p>
+          <form class="subscribe-form">
+            <input type="email" placeholder="Enter your email" required />
+            <button type="submit">Subscribe</button>
+          </form>
         </div>
-        <div class="product-info">
-          <h4>Fermented Soap Bar</h4>
-          <p class="price">$3.80 <span class="old-price">$5.15</span></p>
-        </div>
-        <div class="product-hover">
-          <div class="hover-buttons">
-            <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
-            <button class="icon-button"><i class="fa fa-heart"></i></button>
-            <button class="buy-now">BUY NOW</button>
+        <div class="footer-right">
+          <h3>Contact Us</h3>
+          <div class="contacts">
+            <p>
+              <i class="fa fa-envelope"></i
+              ><a href="mailto:hello@repaws.com">hello@repaws.com</a>
+            </p>
+            <p>
+              <i class="fa fa-phone"></i
+              ><a href="tel:+00123456789">(+00) 123 456 789</a>
+            </p>
           </div>
+          <h3>Follow us:</h3>
+          <ul class="social-links">
+            <li>
+              <a href="#"><i class="fa fa-instagram"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-facebook-square"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-linkedin-square"></i></a>
+            </li>
+          </ul>
         </div>
       </div>
-
-      <div class="product-card page-1">
-        <div class="product-image">
-          <a href="/product/1"><img src="../img/product1.svg" alt="RePaws Product 4" /></a>
-          <span class="discount">-26%</span>
-        </div>
-        <div class="product-info">
-          <h4>Gentle Paw Balm</h4>
-          <p class="price">$5.80 <span class="old-price">$7.80</span></p>
-        </div>
-        <div class="product-hover">
-          <div class="hover-buttons">
-            <button class="icon-button"><i class="fa fa-shopping-cart"></i></button>
-            <button class="icon-button"><i class="fa fa-heart"></i></button>
-            <button class="buy-now">BUY NOW</button>
-          </div>
-        </div>
+      <div class="footer-bottom">
+        <p>&copy; 2025 RePaws. All rights reserved.</p>
       </div>
-    </div>
-  </section>
-
-  <footer class="footer">
-    <div class="footer-content">
-      <div class="footer-left">
-        <h3>Stay in the Loop</h3>
-        <p>Subscribe to our newsletter for updates, pet care tips, and green living insights.</p>
-        <form class="subscribe-form">
-          <input type="email" placeholder="Enter your email" required />
-          <button type="submit">Subscribe</button>
-        </form>
-      </div>
-      <div class="footer-right">
-        <h3>Contact Us</h3>
-        <div class="contacts">
-          <p><i class="fa fa-envelope"></i><a href="mailto:hello@repaws.com">hello@repaws.com</a></p>
-          <p><i class="fa fa-phone"></i><a href="tel:+00123456789">(+00) 123 456 789</a></p>
-        </div>
-        <h3>Follow us:</h3>
-        <ul class="social-links">
-          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa fa-facebook-square"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="footer-bottom">
-      <p>&copy; 2025 RePaws. All rights reserved.</p>
-    </div>
-  </footer>
-</body>
-
+    </footer>
+  </body>
 </html>
