--- a/product/1.html
+++ b/product/1.html
@@ -13,10 +13,10 @@
     />
     <meta name="author" content="RePaws" />
     <title>RePaws | Natural Pet Shampoo</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="img/logo.svg" />
-    <link rel="icon" type="image/png" sizes="32x32" href="img/logo.svg" />
-    <link rel="icon" type="image/png" sizes="16x16" href="img/logo.svg" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../img/logo.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../img/logo.svg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../img/logo.svg" />
+    <link rel="manifest" href="../site.webmanifest" />
     <link rel="stylesheet" href="../shared.css" />
     <link rel="stylesheet" href="product.css" />
     <link
@@ -116,8 +116,8 @@
       <div class="product-grid" id="productGrid">
         <div class="product-card page-1">
           <div class="product-image">
-            <a href="/product/1"
-              ><img src="../img/product1.svg" alt="RePaws Product 2"
+            <a href="/product/2"
+              ><img src="../img/product2.svg" alt="RePaws Product 2"
             /></a>
             <span class="discount">-16%</span>
           </div>
@@ -138,8 +138,8 @@
 
         <div class="product-card page-1">
           <div class="product-image">
-            <a href="/product/1"
-              ><img src="../img/product1.svg" alt="RePaws Product 3"
+            <a href="/product/3"
+              ><img src="../img/product3.svg" alt="RePaws Product 3"
             /></a>
             <span class="discount">-27%</span>
           </div>
@@ -160,8 +160,8 @@
 
         <div class="product-card page-1">
           <div class="product-image">
-            <a href="/product/1"
-              ><img src="../img/product1.svg" alt="RePaws Product 4"
+            <a href="/product/2"
+              ><img src="../img/product2.svg" alt="RePaws Product 4"
             /></a>
             <span class="discount">-26%</span>
           </div>
