--- a/about-us.html
+++ b/about-us.html
@@ -133,14 +133,14 @@
       </div>
     </section>
 
-    <section class="process">
+    <!-- <section class="process">
       <div class="section-head-box">
         <h2>Our production process</h2>
       </div>
       <div class="process-container">
         <img src="img/process.svg" alt="" />
       </div>
-    </section>
+    </section> -->
     <footer class="footer">
       <div class="footer-content">
         <div class="footer-left">
